test/bad/classes/type02.px

class A def
    x: Int

class B def
    x: Int

a: A = B()
